--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Welcome To Kokoa Clone</title>
 </head>
 <body>
@@ -25,9 +25,9 @@
     <p class="welcome-header__text">If you have a Kokoa Account, log in with your eamil or phone number.</p>
 </header>
 <form class="login-form">
-    <input type="email" placeholder="Email or phone number"/>
-    <input type="password" placeholder="Password"/>
-    <input type="button" value="Log In" />
+    <input placeholder="Email or phone number" type="email"/>
+    <input placeholder="Password" type="password"/>
+    <input type="button" value="Log In"/>
     <button>Sign Up</button>
     <a href="#">Find Kokoa Account or Password</a>
 </form>
