feat : login-form input

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
     <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
     <p class="welcome-header__text">If you have a Kokoa Account, log in with your eamil or phone number.</p>
 </header>
-<form class="login-form">
+<form id="login-form">
     <input placeholder="Email or phone number" type="email"/>
     <input placeholder="Password" type="password"/>
     <input type="button" value="Log In"/>
-    <button>Sign Up</button>
     <a href="#">Find Kokoa Account or Password</a>
 </form>
 <script crossorigin="anonymous"
