--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <form id="login-form">
     <input placeholder="Email or phone number" type="email"/>
     <input placeholder="Password" type="password"/>
-    <input type="button" value="Log In"/>
+    <input type="submit" value="Log In"/>
     <a href="#">Find Kokoa Account or Password</a>
 </form>
 <script crossorigin="anonymous"
